# caloriesapp

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .env.oauth-celery.example  Dockerfile  README.md  TESTING.md  alembic.ini  docker-compose.backend.yml  entrypoint.sh  pyproject.toml  requirements.txt  scripts.seed_data.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  20260312_0001_initial_schema.py  20260313_0002_expand_language_codes.py  __init__.py
backend/app/: main.py
backend/app/api/: bootstrap_v1.py  router.py  router_complete.py
backend/app/common/: __init__.py  exceptions.py  messages.py  responses.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  deps.py  localization.py  logging.py  rate_limit.py  redis.py  security.py  token_store.py  upload_security.py
backend/app/db/: base.py
backend/app/integrations/: __init__.py  barcode_provider.py  meal_photo_analyzer.py  openai_client.py  recommendation_generator.py  storage_s3.py
backend/app/repositories/: __init__.py  base.py  meal_repository.py  recommendation_repository.py  user_repository.py  weight_repository.py
backend/app/schemas/: __init__.py  auth.py  barcode.py  common.py  contracts_phase3.py  features.py  goals.py  meal.py  (+11 more)
backend/tests/: __init__.py  conftest.py  factories.py  test_auth.py  test_barcodes.py  test_goals.py  test_integration_contracts.py  test_meal_analysis_service.py  test_meals.py  test_nutrition_calculation.py  test_profile.py  test_recommendations.py  test_reports.py  test_settings.py
(+369 files in other folders)
