[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition-assistant-backend"
version = "0.1.0"
description = "Production-oriented FastAPI backend for nutrition assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy[asyncio]>=2.0.32,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.2,<2.0.0",
  "redis>=5.0.8,<6.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "boto3>=1.35.0,<2.0.0",
  "celery[redis]>=5.4.0,<6.0.0",
  "orjson>=3.10.7,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "factory-boy>=3.3.0,<4.0.0",
  "mypy>=1.11.0,<2.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
